<resources>
    <string name="app_name">Find Meaning</string>
    <string name="find_meaning">Find Meaning</string>


    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_item">nav_item</string>
    <string name="search">Search</string>

    <!--    toolbar_for_notes_history_bookmark-->
    <string name="navigation_back">navigate back</string>

    <string name="history">History</string>
    <string name="notes">Notes</string>
    <string name="bookmark">Bookmark</string>
    <string name="exit">Exit</string>

    <string name="delete_all">Delete</string>
    <string name="menu">menu</string>

    <!--    Retrofit -->
    <string name="retrofit_error">Error!!</string>
    <string name="retrofit_request_failure">Request failure</string>

    <string name="sharebtn">shareBtn</string>
    <string name="audio">audio</string>
    <string name="meanings">Meanings</string>
    <string name="definition">Definition</string>
    <string name="example">Example</string>
    <string name="synonyms">Synonyms</string>
    <string name="antonyms">Antonyms</string>
    <string name="audio_fail">Could not play audio</string>
    <string name="unableToFetchData"> Type some other word</string>
    <string name="no_audio_avaiable">No audio avaiable</string>
    <string name="no_example">No example available</string>
    <string name="no_numbers">Word should not contain numbers</string>
    <string name="exit_app">Exit App?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_all_data">Delete all</string>
    <string name="all_bookmark_deleted">All bookmark is deleted!</string>
    <string name="no_data_found">No Data Found</string>
    <string name="empty_bookmark">Bookmark is Empty! \n Add bookmarks to display</string>
    <string name="empty_history">History is empty</string>
    <string name="history_cleared">\"All History is Cleared ! \"</string>

    <string name="add_note">Add Note</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="description_for_note">Description for note</string>
    <string name="word">Word</string>
    <string name="enter">Enter</string>
    <string name="edit_dialog">Edit Notes</string>
    <string name="add_new_note">Add New Note</string>
    <string name="enter_word">Enter a word</string>
    <string name="enter_description">Enter description</string>
    <string name="note_not_inserted">Note Not Inserted</string>
    <string name="notes_cleared">\"All Notes is Cleared ! \"</string>
    <string name="notes_empty">Notes is Empty! \n Add note to display</string>

</resources>