<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E4050E3A"
    android:gravity="center">

    <TextView
        android:id="@+id/alert_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/button_focused"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/exit_app"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <Button
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/button_focused"
            android:textSize="16sp"
            android:text="@string/no"
            android:background="@drawable/rounded_button_yellow"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/button_focused"
            android:textSize="16sp"
            android:text="@string/yes"
            android:background="@drawable/rounded_button_yellow"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>